--- a/src/assets/styleSheets/index.css
+++ b/src/assets/styleSheets/index.css
@@ -11,6 +11,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 h1, h2, h3, h4, h5, h6, small {
   font-family: "Merriweather", serif;
